# claude-voice-hooks

./: .gitignore  ADDING_NEW_INTENT.md  AUDIO_SETUP.md  CLAUDE.md  LICENSE  README.md  claude_intent_hook.py  config.yaml  my-translator.modelfile  pyproject.toml  pytest.ini  requirements.txt  requirements_py313.txt  settings.json.template
audio/: .gitkeep
docs/: VOICEVOX_API_ANALYSIS.md  VOICEVOX_INTEGRATION.md  voicevox_api.json
hook/: README.md  settings.json  think_aloud_hook.py
scripts/: start_server.bat
server/: __init__.py  app.py  config.py  models.py
server/core/: translation.py  translation_logger.py  translation_tts_worker.py  tts_factory.py  tts_voicevox.py
tests/: DIAGNOSIS.md  IMPROVEMENTS.md  QUICK_START.md  README.md  TEST_SUMMARY.md  __init__.py  conftest.py  requirements.txt  test_app.py  test_config.py  test_edge_cases.py  test_hook_e2e.py  test_integration.py  test_performance.py  test_postprocessing.py  test_queue_handler.py  test_qwen3_instruct_stability.py  test_real_tdd.py  test_smoke.py  test_think_aloud_hook.py  test_triple_queue_concurrency.py  test_voicevox_engine.py  verify_tests.bat
tests/fixtures/: sample_transcript.jsonl  sample_transcript.md  test_config.yaml
tests/mocks/: __init__.py  mock_ollama.py
